--- a/exercicio5.html
+++ b/exercicio5.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style3.css">
-    <title>exercicio 3</title>
-
+    <title>Exercício 5</title>
 </head>
 <body>
-    <h1>Exercício 3</h1>
 
-    <script src="exercicio3.js"></script>
+    <h1>Exercício 5</h1>
+
+    <button onclick="calcular()">CLICK AQUI</button>
+
+    
+    
+<script src="exercicio5.js"></script>
 
 
 </body>
